28 February 2022 Petasis George <petasis@iit.demokritos.gr>:
 * backend-django/clarin_backend/views.py: Fixes in coreference annotator
 table save.

 * clarin-angular/src/app/components/controls/annotation-set-comparator/annotation-set-comparator.component.html:
 * clarin-angular/src/app/components/controls/annotation-set-comparator/annotation-set-comparator.component.ts:
 * clarin-angular/src/app/components/controls/annotation-set-inspector/annotation-set-inspector.component.html:
 * clarin-angular/src/app/components/controls/annotation-set-inspector/annotation-set-inspector.component.ts:
 Synchronised scrollbars in Annotation Set Inspectors.

27 February 2022 Petasis George <petasis@iit.demokritos.gr>:
 * clarin-angular/src/app/components/controls/text-widget/text-widget.component.ts:
 Added migration for attributes that are spans in migrateOldSpans().

 * clarin-angular/src/app/components/controls/coref/coref-segment-entry/coref-segment-entry.component.ts:
 * clarin-angular/src/app/components/controls/coref/coref-combobox/coref-combobox.component.html:
 * clarin-angular/src/app/components/controls/coref/coref-combobox/coref-combobox.component.ts:
 Fixes for Coreference Annotator.

26 February 2022 Petasis George <petasis@iit.demokritos.gr>:
 * clarin-angular/src/app/components/controls/text-widget/text-widget.component.ts:
 * clarin-angular/src/app/components/controls/button/annotation-indicator/annotation-indicator.component.html:
 * clarin-angular/src/app/components/controls/button/annotation-indicator/annotation-indicator.component.ts:
 * clarin-angular/src/app/components/controls/base-control/base-control.component.ts:
 * clarin-angular/src/app/components/controls/coref/coref-add-btn/coref-add-btn.component.html:
 * clarin-angular/src/app/components/controls/coref/coref-add-btn/coref-add-btn.component.ts:
 * clarin-angular/src/app/components/controls/coref/coref-annotate-btn/coref-annotate-btn.component.html: