@@ -35,3 +35,5 @@ docker/conf/env
 docker/conf/mongo-init.js
 docker/env
 api-client/__pycache__
+backend-django/importapi/__pycache__/
+backend-django/importapi/migrations/__pycache__/
